bk_ida/gccida/g0/mark_life
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_life/src/local-alloc.c:2806:29: error: must use 'enum' tag to refer to type 'machine_mode'
void  mark_life( int regno, machine_mode mode, int life) 
                            ^
                            enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_life/src/local-alloc.c:2847:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_life/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_life/src/local-alloc.c:2847:53: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
                                                    ^~~~~~~~~~~~
                                                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_life/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_life/src/obj/local-alloc.o] Error 1
